--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -35,4 +35,13 @@ $mostdarkcolor: var(--mostdarkcolor);
 /* 初始化样式 */
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  margin: 0 !important;
+  padding: 0 !important;
+  width: 100%;
+  height: 100%;
 }
